# ml-dashbord

./: .env.example  .gitignore  AWS_EC2_DEPLOYMENT.md  DEPLOYMENT_NOTES.md  FLY_IO_DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  deploy-flyio.sh  deploy.sh  dev.bat  dev.sh  docker-compose.yml  pyproject.toml  setup-ec2.sh  start.bat  start.sh  stop.bat  stop.sh
.kiro/specs/ml-visualization-dashboard/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  fly.toml  nixpacks.toml  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/models/: __init__.py  database.py  exceptions.py  schemas.py
backend/src/repositories/: __init__.py  database.py  experiment_repository.py
backend/src/services/: __init__.py  cache.py  data_preprocessor.py  dataset_loader.py  metrics_calculator.py  model_factory.py  model_trainer.py
backend/tests/: conftest.py  test_api_endpoints.py  test_data_services.py  test_integration_api.py  test_ml_services.py  test_property_api_response.py  test_property_cors_config.py  test_property_error_state_invariance.py  test_property_experiment_repository.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  app.py  fly.toml  nixpacks.toml  pyproject.toml  requirements.txt
frontend/src/: api_client.py  app.py  config.py
frontend/src/components/: __init__.py  metrics.py  sidebar.py  visualizations.py
frontend/tests/: test_property_best_model_identification.py  test_property_frontend_api_connection.py  test_property_model_hyperparameters.py
tests/: test_property_monorepo_independence.py
