[project]
name = "ml-dashboard-frontend"
version = "0.1.0"
description = "Streamlit frontend for ML Dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
